boulder/boulder/tests/compile_fail/type/invalid_field.bo
# Mismatched types
# `u16`
# `u32`

struct A {
    b: u16,
}

fn test(a: A) -> u32 {
    a.b
}